--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,27 @@
-<h1 class="title">I'm doing the thing, Momo!<h1>
+<% content_for :page_title, "Matt Galaxy's First Blog!" %>
+<% content_for :sub_title, "A trashy attempt at Ruby"%>
+
+
+
+  <section class="section">
+    <div class="container">
+      <% @posts.each do |post| %>
+      <div class="card">
+        <div class="card content">
+          <div class="media">
+            <div class="media-content">
+              <p class="title is-4"> <%= link_to post.title, post %></p>
+            </div>
+          </div>
+          <div class="content">
+            <%= post.content %>
+          </div>
+          <div class="comment-count">
+            <span class="tag is-rounded"><%# comment count%></span>
+          </div>
+        </div>
+      </div>
+      <% end %>
+    </div>
+
+  </section>
